// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonReport renders baseline report with competitors correctly 1`] = `
"<Container>
  <LeasingPerformanceReport />
  <CampaignInvestmentReport />
  <AcquisitionFunnelReport />
  <FunnelPerformanceAnalysis />
  <BaselineComparisonMatrix />
</Container>"
`;

exports[`CommonReport renders baseline report without competitor correctly 1`] = `
"<Container>
  <LeasingPerformanceReport />
  <CampaignInvestmentReport />
  <AcquisitionFunnelReport />
  <FunnelPerformanceAnalysis />
</Container>"
`;
